# RockASK

./: .editorconfig  .env.docker.example  .gitignore  HANDOFF_RockASK_2026-03-11.md  HANDOFF_RockASK_2026-03-14.md  README.md  RockASK_Dashboard_PRD.md  ai_studio_code.html  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  rag_landing_refined.html  tsconfig.base.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260311_0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: chats.py  dashboard.py  documents.py  health.py  knowledge_spaces.py  preferences.py  queries.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/schemas/: chats.py  dashboard.py  documents.py  knowledge_spaces.py  preferences.py  queries.py
apps/api/app/services/: chats.py  dashboard.py  dashboard_mock.py  documents.py  knowledge_spaces.py  preferences.py  queries.py
apps/api/tests/: test_chats_api.py  test_documents_api.py  test_knowledge_spaces_api.py  test_preferences_api.py  test_queries_api.py
apps/web/: .env.example  next.config.ts  package.json  tsconfig.json
db/: ERD.md  schema.sql
docs/: be-route-01-chat-list-api-contract.md  be-route-02-chat-detail-api-contract.md  be-route-03-knowledge-space-list-api-contract.md  be-route-04-knowledge-space-detail-api-contract.md  be-route-05-document-detail-api-contract.md  landing-p1-qa-checklist.md  pr-landing-p1-qa-accessibility.md  rag-landing-detailed-functional-spec.md
(+54 files in other folders)
