[project]
name = "rockask-api"
version = "0.1.0"
description = "FastAPI backend skeleton for RockASK"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.16.0",
  "celery>=5.6",
  "fastapi>=0.126.0",
  "pgvector>=0.4.1",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.11.0",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.38.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.0",
  "ruff>=0.11.0"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "/app",
  "/alembic",
  "/alembic.ini",
  "/README.md"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
